krusader: Autospec creation for update from version 2.7.2 to version 2.8.0
Adriaan de Groot (1):
      Fix crash-on-exit on FreeBSD

Alexander Bikadorov (30):
      Use default search bar search mode setting always on "start by typing"
      Panel: Always delete files by their URL
      Search: Simplify result tab layout in search dialog
      Code cleaning related to search
      Get rid of some dynamic casts when using Qt's new signal/slot syntax
      Replaced all null pointer constants with C++11 'nullptr' keyword
      Use the 'auto' specifier for variable declaration
      Replace 'virtual' by 'override' keyword
      Replace default constructor/destructor bodies with 'default' keyword
      Replace old-style for loops by range-based loops
      Use const reference as parameter and std::move() if possible
      Replace static by dynamic casts for downcasts
      Use const reference instead of copy initialization where possible
      Use const reference for loop variables where possible
      Remove redundant member initializations in constructors
      Panel: Simplify handling escape key to close search bar when panel is focused
      Search: Improve right-click context menu
      Panel: change KrView::getSelectedKrViewItems() from output parameter to normal return value
      Search: Fix copy-to-clipboard action to only copy selected items
      Panel: Clean code for creating new text file
      Panel: Create new local text files directly with QFile
      FileSystem: Fix using creation time from KIO as changed time (ctime)
      Synchronizer: Set column headers to adjust widths automatically
      Panel: Improve open actions in context menu
      FileSystem: Document FileItem::isDir()
      Remove 'isExiting' logic from closing sequence
      Fix main window beeing closed to tray instead of exit on session logout
      Replace explicite type casting with dynamic casts
      Archive: Fix invalid destination URL when packing/unpacking from remote location
     

--- a/NEWS
+++ b/NEWS
@@ -7,6 +7,39 @@
 
 
 
+-------------------------------- 2.8.0 A New Day -----------------------
+
+New features: Tab convenience.
+    - Duplicating with double click
+    - Closing tabs with Ctrl+LMB or Alt+LMB (configurable)
+    - Undoing the closed tabs while the app is running
+    - Dynamically sized tabs
+    - New tab position is configurable
+    - New Tab Button behavior is configurable
+    - Tab button visibility options fine-tuned
+
+New feature: History and suggestions in New Folder dialog.
+
+New feature: Hit Rename shortcut (F2) multiple times to cycle through
+    full name, file name and extension selections.
+
+New feature: Shift+Del removes undesired entries from the history in various dialogs.
+
+Improved sync between the panel and embedded terminal.
+
+Improved color configuration.
+
+Change: Default shortcuts for New Tab and Duplicate Current Tab are swapped
+    to align with other KDE software.
+
+Change: Default shortcut for embedded terminal (Ctrl+Alt+T to Ctrl+Alt+E)
+    to avoid a conflict with default global shortcut for the terminal.
+
+Fixed 60+ issues including some crashes, important problems with viewing archives
+  and iso files, file selection and directory deletion. See ChangeLog.
+
+
+
 -------------------------------- 2.7.2 Peace of Mind -------------------
 
 Bug fix release. See ChangeLog.
